# get-azure-role-assignments-using-python

./: .gitignore  Pipfile  README.md  azcli.py  pyproject.toml  role_assignments.py
.github/: dependabot.yml
